kuber/broker-metric-service .yaml
apiVersion: v1
kind: Service
metadata:
  name: broker-metric-svc

spec:
  type: ClusterIP
  ports:
    - targetPort: 8000
      port: 8000
  selector:
      app: "broker"
