kuber/broker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: broker-svc

spec:
  type: NodePort
  ports:
    - targetPort: 8080
      port: 8080
      nodePort: 30008
  selector:
      app: "broker"
