kuber/cassandra-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cassandra-svc

spec:
  type: ClusterIP
  ports:
    - targetPort: 9042
      port: 9042
  selector:
      app: "cassandra"
