kuber/envoy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-svc

spec:
  type: NodePort
  ports:
    - targetPort: 10000
      port: 10000
      nodePort: 30100
  selector:
      app: "envoy"
