kuber/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-svc

spec:
  type: NodePort
  ports:
    - targetPort: 3000
      port: 3000
      nodePort: 30003
  selector:
      app: "grafana"
