kuber/postgres-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deploy
  
spec:
  selector:
    matchLabels:
      app: postgres

  replicas: 1

  template:
    metadata:
      name: postgres-pod
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: dockerproxy.bale.ai/postgres:14
          ports:
            - containerPort: 5432
          resources:
            limits:
              cpu: 3000m
              memory: 8Gi
            requests:
              cpu: 3000m
              memory: 4Gi
          env:
            - name: POSTGRES_USER
              value: admin
            - name: POSTGRES_PASSWORD
              value: admin
