kuber/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc

spec:
  type: ClusterIP
  ports:
    - targetPort: 5432
      port: 5432
  selector:
      app: "postgres"
