kuber/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-svc

spec:
  type: ClusterIP
  ports:
    - targetPort: 9090
      port: 9090
  selector:
      app: "prometheus"
