kuber/redis-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deploy
  
spec:
  selector:
    matchLabels:
      app: redis

  replicas: 1

  template:
    metadata:
      name: redis-pod
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: dockerproxy.bale.ai/redis:7.0
          ports:
            - containerPort: 6379
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
