kuber/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-svc

spec:
  type: ClusterIP
  ports:
    - targetPort: 6379
      port: 6379
  selector:
      app: "redis"
